Permanent several tests forms/input/file/simple.html == forms/input/file/simple-ref.xhtml | image comparison, max difference: 254, number of differing pixels: 628 when Gecko 94 merges to Beta on 2021-10-04
Categories
(Core :: Widget, defect, P5)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox-esr91 | --- | unaffected |
| firefox92 | --- | unaffected |
| firefox93 | --- | unaffected |
| firefox94 | + | fixed |
| firefox95 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: emilio)
References
(Regression)
Details
(Keywords: intermittent-failure)
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
Filed by: archaeopteryx [at] coole-files.de
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=353239738&repo=try
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/Vh8oOgzaQPOd9cEALNBIGQ/runs/0/artifacts/public/logs/live_backing.log
Reftest URL: https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/tools/reftest/reftest-analyzer.xhtml#logurl=https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/Vh8oOgzaQPOd9cEALNBIGQ/runs/0/artifacts/public/logs/live_backing.log&only_show_unexpected=1
13:38:37 INFO - REFTEST TEST-UNEXPECTED-FAIL | layout/reftests/forms/input/file/simple.html == layout/reftests/forms/input/file/simple-ref.xhtml | image comparison, max difference: 254, number of differing pixels: 628
10514 13:38:37 INFO - REFTEST TEST-UNEXPECTED-FAIL | layout/reftests/forms/input/file/rtl.html == layout/reftests/forms/input/file/rtl-ref.xhtml | image comparison, max difference: 254, number of differing pixels: 318
10521 13:38:37 INFO - REFTEST TEST-UNEXPECTED-FAIL | layout/reftests/forms/input/file/size.html == layout/reftests/forms/input/file/simple-ref.xhtml | image comparison, max difference: 254, number of differing pixels: 628
10530 13:38:37 INFO - REFTEST TEST-UNEXPECTED-FAIL | layout/reftests/forms/input/file/background.html == layout/reftests/forms/input/file/background-ref.xhtml | image comparison, max difference: 254, number of differing pixels: 314
10538 13:38:38 INFO - REFTEST TEST-UNEXPECTED-FAIL | layout/reftests/forms/input/file/style.html == layout/reftests/forms/input/file/style-ref.xhtml | image comparison, max difference: 254, number of differing pixels: 314
https://treeherder.mozilla.org/logviewer?job_id=353239741&repo=try also has
REFTEST TEST-UNEXPECTED-FAIL | layout/reftests/writing-mode/ua-style-sheet-button-1.html == layout/reftests/writing-mode/ua-style-sheet-button-1a-ref.html | image comparison, max difference: 254, number of differing pixels: 9080
REFTEST TEST-UNEXPECTED-FAIL | layout/reftests/writing-mode/ua-style-sheet-input-color-1.html == layout/reftests/writing-mode/ua-style-sheet-input-color-1-ref.html | image comparison, max difference: 198, number of differing pixels: 1704
Comment 1•4 years ago
|
||
Duplicate(s) of bug 1733354?
| Assignee | ||
Comment 2•4 years ago
|
||
Yeah, though it's a bit odd that we're using dark system colors there. Anyhow bug 1733354 will fix.
| Comment hidden (Intermittent Failures Robot) |
Comment 4•4 years ago
|
||
It's still an issue.
Updated•4 years ago
|
| Assignee | ||
Comment 5•4 years ago
|
||
I'm really confused about this. Let me try to guess how to reproduce locally or something.
| Assignee | ||
Comment 6•4 years ago
|
||
Ohh, they're comparing with a chrome:// URI and IIRC dev-edition uses a dark theme by default, which would explain this.
| Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Comment 7•4 years ago
|
||
In the future we need to remove this patch, implement dark form
controls, and probably make those tests pass some other way (like
forcing the chrome color-scheme to match content for those tests or
something). Otherwise they are really expected to fail on a Firefox dark
theme.
But this is a somewhat-easy fix for now.
| Assignee | ||
Comment 10•4 years ago
|
||
Comment on attachment 9244236 [details]
Bug 1733413 - Force light color-scheme for non-native-theme docs for now. r=mstange
Beta/Release Uplift Approval Request
- User impact if declined: None
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This only affects chrome documents that use the non-native theme with a dark firefox theme.
- String changes made/needed: none
Comment 11•4 years ago
|
||
| bugherder | ||
| Comment hidden (Intermittent Failures Robot) |
Comment 13•4 years ago
|
||
Comment on attachment 9244236 [details]
Bug 1733413 - Force light color-scheme for non-native-theme docs for now. r=mstange
Approved for 94.0b2.
Comment 14•4 years ago
|
||
| bugherder uplift | ||
Comment 15•4 years ago
|
||
Regressed by bug 1731678 I think.
| Comment hidden (Intermittent Failures Robot) |
Updated•4 years ago
|
Description
•