Bug 1733413 - Force light color-scheme for non-native-theme docs for now. r=mstange

In the future we need to remove this patch, implement dark form
controls, and probably make those tests pass some other way (like
forcing the chrome color-scheme to match content for those tests or
something). Otherwise they are really expected to fail on a Firefox dark
theme.

But this is a somewhat-easy fix for now.

Differential Revision: https://phabricator.services.mozilla.com/D127473